// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|molecules/MapTitleHeader BPM is 100 1`] = `
<div
  className="ui segment"
>
  <div>
    genre
    <h2
      className="ui header"
    >
      title
       
      subTitle
    </h2>
    artist
  </div>
  <div>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        SP
         
        ANOTHER
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        ☆
        1
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        BPM 
        100
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        1000
         notes
      </div>
    </div>
  </div>
  <div>
    <span
      style={
        Object {
          "marginRight": "0.5em",
        }
      }
    >
      TexTage:
    </span>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?1A100"
        >
          1P
        </a>
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?2A100"
        >
          2P
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|molecules/MapTitleHeader BPM is 100-400 1`] = `
<div
  className="ui segment"
>
  <div>
    genre
    <h2
      className="ui header"
    >
      title
       
      subTitle
    </h2>
    artist
  </div>
  <div>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        SP
         
        ANOTHER
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        ☆
        1
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        BPM 
        100-400
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        1000
         notes
      </div>
    </div>
  </div>
  <div>
    <span
      style={
        Object {
          "marginRight": "0.5em",
        }
      }
    >
      TexTage:
    </span>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?1A100"
        >
          1P
        </a>
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?2A100"
        >
          2P
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|molecules/MapTitleHeader default 1`] = `
<div
  className="ui segment"
>
  <div>
    genre
    <h2
      className="ui header"
    >
      title
       
      subTitle
    </h2>
    artist
  </div>
  <div>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        SP
         
        ANOTHER
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        ☆
        1
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        BPM 
        100
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        1000
         notes
      </div>
    </div>
  </div>
  <div>
    <span
      style={
        Object {
          "marginRight": "0.5em",
        }
      }
    >
      TexTage:
    </span>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?1A100"
        >
          1P
        </a>
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?2A100"
        >
          2P
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|molecules/MapTitleHeader playStyle is DP 1`] = `
<div
  className="ui segment"
>
  <div>
    genre
    <h2
      className="ui header"
    >
      title
       
      subTitle
    </h2>
    artist
  </div>
  <div>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        DP
         
        ANOTHER
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        ☆
        1
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        BPM 
        100
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        1000
         notes
      </div>
    </div>
  </div>
  <div>
    <span
      style={
        Object {
          "marginRight": "0.5em",
        }
      }
    >
      TexTage:
    </span>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?DA100"
        >
          DP
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|molecules/MapTitleHeader playStyle is SP 1`] = `
<div
  className="ui segment"
>
  <div>
    genre
    <h2
      className="ui header"
    >
      title
       
      subTitle
    </h2>
    artist
  </div>
  <div>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        SP
         
        ANOTHER
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        ☆
        1
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        BPM 
        100
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        1000
         notes
      </div>
    </div>
  </div>
  <div>
    <span
      style={
        Object {
          "marginRight": "0.5em",
        }
      }
    >
      TexTage:
    </span>
    <div
      className="ui divided horizontal list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?1A100"
        >
          1P
        </a>
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        <a
          href="//textage.cc/score/1/textageUid.html?2A100"
        >
          2P
        </a>
      </div>
    </div>
  </div>
</div>
`;
